# madeline

./: .gitignore  README.md  components.md
components/cfg/: README.md
components/cfg/examples/: ipps-22.json  ipps.json  system.json
components/cfg/schema/: ipps.jschema  system.jschema
components/ipps/: .cproject  .project  Makefile  Makefile.in  README.md  common.mk  config.h  config.status  configure  configure.ac  configure.scan
components/ipps/autom4te.cache/: output.0  output.1  output.3  output.8  requests  traces.0  traces.1  traces.2  traces.3  traces.8  traces.9
components/ipps/doc/: Makefile  Makefile.in
components/ipps/man/: Makefile  Makefile.am  Makefile.in
components/ipps/notes/: components.txt
components/ipps/scripts/: Makefile  Makefile.in
components/ipps/src/: Makefile  Makefile.am  Makefile.in  ipps.h
components/ipps/src/bkgrnd/: Makefile  Makefile.am  Makefile.in  bkgrnd.cpp  bkgrnd.h  lib.c  lib.h  mbkgrnd.cpp  mbkgrnd.h  mparse.cpp  mparse.h  mpfring.h
components/ipps/src/bkgrnd/.deps/: lib.Po
components/ipps/src/ipps/: Makefile.am  ipps.cpp  ipps.h  mpfring.cpp  mpfring.h  mthread.cpp  mthread.h  mthreads.h  notes.txt
components/ipps/src/logging/: Makefile  Makefile.am  Makefile.in  lib.cpp  lib.h  logging.cpp  logging.h
components/ipps/src/main/: Makefile  Makefile.am  Makefile.in  main.c  main.cpp  main.h  test.c  test.cpp  test.h
components/ipps/src/main/.deps/: do.Po  main.Po  test.Po
components/ipps/src/pfilter/: Makefile  Makefile.am  Makefile.in  lib.c  lib.h  pfilter.cpp  pfilter.h
components/ipps/src/thdmgmt/: Makefile  Makefile.am  Makefile.in  lib.c  lib.cpp  lib.h  thdmgmt.cpp  thdmgmt.h
components/mutil/: Makefile.in  README.md  common.mk  configure  configure.ac  configure.scan
components/mutil/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
components/mutil/doc/: Makefile.in
components/mutil/scripts/: Makefile.in
components/mutil/src/: Makefile.am  Makefile.in  madeline.h  mparse.h  mutil.cpp  mutil.h
components/pfring/: build.txt  pf_ring.ko
components/ppp/: configure.ac
components/ppp/doc/: OVERVIEW
components/ppp/src/main/: Makefile.am  main.cpp  main.h  test.cpp
design/: diagrams.docx  ipps.docx  libraries.md  madeline.docx  phs.docx  ppp.docx  ~$deline.docx
design/pinj/: README.md
design/references/: phs.docx
src/backend/: README.md
src/config/: README.md  pinj.yaml
src/cserver/: README.md
src/httpp/: README.md
src/ms/: README.md
src/phs/: README.md
src/pp/: README.md
src/ppp/: README.md
src/sim/: README.md
(+59 files in other folders)
